updated goreleaser file

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -106,7 +106,7 @@ archives:
 checksum:
   name_template: "checksums.txt"
 snapshot:
-  name_template: "{{ .Tag }}"
+  version_template: "{{ .Tag }}"
 changelog:
   sort: asc
   filters:
