--- a/generate-config.yaml
+++ b/generate-config.yaml
@@ -1,6 +1,9 @@
-generate:
-  min_occurrences: 5
-  remove_static_fields: true
-  labler:
-    type: "local-random-forest" # options: local-random-forest, remote-llm
-    model_path: "models/random_forest_model.pkl" # only for local-random-forest
+min_occurrences: 10
+distinct_values: true
+labler:
+  type: "local-ml" # options: local-ml, remote-llm
+  model_path: "../croncert-config/concert-20230509-mod" # only for local-random-forest
+  words_dir: "../croncert-config/word-list" # only for local-random-forest
+# fetcher:
+#   type: "dynamic"
+#   page_load_wait_ms: 2000§
